--- a/css/main.css
+++ b/css/main.css
@@ -10,12 +10,23 @@ html,body{
 html{
     font-size: 14px;
 }
+body{
+    font-family: 'Indie Flower',cursive;
+}
 /*
   ========================================
   Header
   ========================================
 */
-
+header{
+    height: 10%;
+    background-image:url('../img/headerback.jpg');
+    background-repeat:no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: scroll;
+    padding-bottom: 3%;
+}
 .logo h1{
     font-family: Lobster, sans-serif;
     text-transform: uppercase;
@@ -23,4 +34,53 @@ html{
     font-size: 4.2rem;
     line-height: 5.5rem;
     text-align: center;
+    opacity: 1;
 }
+.menu{
+    text-align: center;
+}
+.h-btn{
+    background-color: rgba(81,136,145,0.7);
+    border-bottom: 3px solid rgba(81,136,145,1);
+    font-size:1.7rem;
+    color: white;
+    border-radius: 1px;
+    padding: 10px 6rem;
+    margin-top: 4%
+    
+}
+.h-btn:hover{
+    background-color: rgba(81,136,145,1);
+}
+/*
+  ========================================
+  Jumbotron
+  ========================================
+*/
+.myjumbotron{
+    height: 500px;
+    background-image: url('../img/jumbotron.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat:no-repeat;
+    color: white;
+}
+.bytag h2{
+    font-family: 'Indie Flower',cursive;
+    font-size:5rem;
+    text-align: center;
+    text-transform:capitalize;
+    padding-top: 5%;
+    margin-bottom: 8%;
+    opacity: 0.5;
+}
+.bytag p{
+    font-family: cursive;
+    font-size: 1.2rem;
+    opacity: 0.5;
+}
+/*
+  ========================================
+  Media
+  ========================================
+*/
