add animation to portfolio section

--- a/css/main.css
+++ b/css/main.css
@@ -94,11 +94,15 @@ header{
     border-bottom: 3px solid;
     font-size: 1.6rem;
 }
+.p-btn:hover,
+.p-btn:active{
+    color: white;
+}
 .portf-item{
     margin-top: 10%;
     margin-left: 2%;
     height:300px;
-    width: 20px;
+    width: 50px;
 
 }
 .portf-item img{
@@ -108,8 +112,30 @@ header{
     margin-top: 5%;
     text-align: center;
 }
-.portf-show img{
+.p-item{
     border: 5px solid rgba(0,0,0,0.8);
+    margin-left: 5px;
+}
+#item1{background-image: url('http://via.placeholder.com/250x360/DEDDC9/8E8F90');width: 250px;height: 360px;}
+#item2{background-image: url('http://via.placeholder.com/250x360/DEDDC9/8E8F90');width: 250px;height: 360px;}
+#item3{background-image: url('http://via.placeholder.com/250x360/DEDDC9/8E8F90');width: 250px;height: 360px;}
+#item4{background-image: url('http://via.placeholder.com/250x360/DEDDC9/8E8F90');width: 250px;height: 360px;}
+#item5{background-image: url('http://via.placeholder.com/250x360/DEDDC9/8E8F90');width: 250px;height: 360px;}
+/*
+  ========================================
+  Portfolio Animation
+  ========================================
+*/
+.sportfolioitem{
+    animation-name: portfolyoThrow;
+    animation-duration: 3s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+    position: relative;
+}
+@keyframes portfolyoThrow {
+    from {background-image: url('http://via.placeholder.com/250x360/DEDDC9/8E8F90');width: 250px;height: 360px;left:0;bottom:0;}
+    to   {background-image: url('http://via.placeholder.com/400x600/DEDDC9/8E8F90');width: 400px;height: 600px;left:1000px;bottom: 150px;}
 }
 /*
   ========================================
