--- a/css/main.css
+++ b/css/main.css
@@ -67,6 +67,10 @@ header{
     color: white;
     border-bottom: 1rem solid rgba(47,28,20,0.8); 
 }
+#homejumbotron{
+    background-image: url('../img/homejumbotron.jpg');
+    border-bottom: 1rem solid rgba(21,39,49,0.4); 
+}
 .bytag h2{
     font-family: 'Indie Flower',cursive;
     font-size:5rem;
@@ -76,11 +80,50 @@ header{
     margin-bottom: 8%;
     opacity: 0.5;
 }
+.h-bytag h2{
+    opacity: 0.8;
+}
+/*
+  ========================================
+  Blog
+  ========================================
+*/
+.h-blog{
+    height: 200px;
+    background-image: url('');
+    background-size:cover;
+    background-position: center;
+    background-repeat:no-repeat;
+}
 /*
   ========================================
   Portfolio
   ========================================
 */
+#home-portfolio{
+    background-image: url('../img/homportfback.jpg');
+    background-size: cover;
+    background-position: center center;
+    background-repeat:no-repeat;
+    padding-top: 10%;
+    padding-bottom: -10%;
+    padding-right: 7%;
+    padding-left: 7%;
+    
+}
+#home-portfolio h2{
+    font-size: 6rem;
+    text-align: center;
+    color: rgba(255,255,255,0.8)
+}
+#homeportfbtn{
+    background-color: rgba(81,136,145,0.4);
+    display: inline-block;
+    margin: 20% 7%;
+    margin-left: 9%;
+    color: black;
+    font-weight: 700;
+}
 .h-portfolio{
     padding-top: 2%;
     padding-bottom: 20%;
