--- a/css/main.css
+++ b/css/main.css
@@ -19,13 +19,12 @@ body{
   ========================================
 */
 header{
-    height: 10%;
     background-image:url('../img/headerback.jpg');
     background-repeat:no-repeat;
     background-size: cover;
     background-position: center;
-    background-attachment: fixed;
-    padding-bottom: 3%;
+    padding-top: 2%;
+    padding-bottom: 5%;
 }
 .logo h1{
     font-family: Lobster, sans-serif;
@@ -89,11 +88,52 @@ header{
   ========================================
 */
 .h-blog{
-    height: 200px;
-    background-image: url('');
+    height: 1000px;
+    background-image: url('../img/homeblog.jpg');
     background-size:cover;
     background-position: center;
     background-repeat:no-repeat;
+    background-attachment: fixed;
+}
+.h-blog h2{
+    color: white;
+    font-size: 5rem;
+    text-transform: capitalize;
+}
+.bho{
+    padding-top: 20%;
+    text-align: center;
+}
+/*
+  ========================================
+  About
+  ========================================
+*/
+.h-about h2{
+    text-align: center;
+    font-size: 7rem;
+    padding-bottom: 300px;
+    padding-top: 100px;
+    color: rgba(255,255,255,0.8);
+}
+.h-about{
+    height: 1500px;
+    border-bottom: 1rem solid rgba(0,0,0,0.5);
+    background-image: url('../img/homeaboutback.jpg');
+    background-size:cover;
+    background-position:right center;
+    background-repeat:no-repeat;
+}
+.h-a-m img{
+    width: 80%;
+    height: auto;
+    border-radius: 22.5% 7.5%;
+}
+.h-a-m p{
+    font-size: 3rem;
+    text-align: center;
+    color: rgba(255,255,255,0.7);
+    padding-top: 9%;
 }
 /*
   ========================================
@@ -108,21 +148,12 @@ header{
     padding-top: 10%;
     padding-bottom: -10%;
     padding-right: 7%;
-    padding-left: 7%;
-    
+    border-bottom: 1rem solid rgba(11,8,3,0.4);
 }
 #home-portfolio h2{
     font-size: 6rem;
     text-align: center;
     color: rgba(255,255,255,0.8)
-}
-#homeportfbtn{
-    background-color: rgba(81,136,145,0.4);
-    display: inline-block;
-    margin: 20% 7%;
-    margin-left: 9%;
-    color: black;
-    font-weight: 700;
 }
 .h-portfolio{
     padding-top: 2%;
