--- a/css/main.css
+++ b/css/main.css
@@ -241,7 +241,7 @@ footer{
     background-image: url('../img/footerback.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: right bottom;
+    background-position: center center;
     background-attachment: fixed;
     height: 300px;
     padding-top: 2%;
