add about page skeleton and make fix some images in index page

--- a/css/main.css
+++ b/css/main.css
@@ -133,7 +133,7 @@ header{
 }
 /*
   ========================================
-  About
+  Home About Section
   ========================================
 */
 .h-about h2{
@@ -162,6 +162,26 @@ header{
     color: rgba(255,255,255,0.7);
     padding-top: 9%;
 }
+/*
+  =======================================================================================================================
+  About Page Begin
+  =======================================================================================================================
+*/
+
+
+
+
+
+
+
+
+
+/*
+  =======================================================================================================================
+  About Page End
+  =======================================================================================================================
+*/
+
 /*
   ========================================
   Portfolio
