--- a/css/main.css
+++ b/css/main.css
@@ -362,13 +362,10 @@ header{
     background-image: url('../img/portfolioitem3.png');
 }
 
-.allItems{};
-.htmlCss{};
-.javascript{};
-.jquery{};
+
 /*
   ========================================
-  Portfolio Animation
+  Portfolio Big Item
   ========================================
 */
 
@@ -397,6 +394,22 @@ header{
     display: hidden;
     border: 10px solid rgb(0,0,0);
     border-radius: 5px;
+}
+.bigItemOterPictures{
+    position: absolute;
+    bottom: 15px;
+    left: 15px;
+}
+.BigItemPicture{
+    width: 100px;
+    height: 100px;
+    background: rgba(255,255,255,0.7);
+    margin-bottom: 5px;
+    border: 5px solid rgba(0,0,0,0.7);
+    display:inline-block;
+    float: left;
+    margin-left: 5px;
+    
 }
 /*
   ========================================
@@ -464,9 +477,11 @@ figure{
 }
 
 
+/*
 #showbig{
     display: none;
 }
+*/
 /*
   ========================================
   Media
